파일 타이틀 수정. SKT -> LGU+  가이드 적용 수정. 문구 수정 등

--- a/app/html/07_etc/privacy_list.html
+++ b/app/html/07_etc/privacy_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
-	<title>공보주정보 서비스_SKT</title>
+	<title>공보주정보 서비스_LGU+</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover" />
@@ -21,8 +21,9 @@
 
 	<div class="header_wrap">
 		<div class="temp">
-			<button type="button"><span><img src="../../images/temp/back_btn.png" alt="이전"></span></button>
+			<!-- <button type="button"><span><img src="../../images/temp/back_btn.png" alt="이전"></span></button> -->
 			<h1>공보주정보</h1>
+			<button type="button" class="btn_close"><span><img src="../../images/temp/btn_top_close.png" alt="앱종료"></span></button>
 		</div>
 		<!-- // temp 삭제 -->
 	</div>
