--- a/app/html/01_home/FRCS_002P.html
+++ b/app/html/01_home/FRCS_002P.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
-	<title>공보주정보 서비스_SKT</title>
+	<title>공보주정보 서비스_LGU+</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover" />
@@ -26,11 +26,11 @@
 		</div>
 		<!-- // temp 삭제 -->
 
-		<!-- <div class="webview_lnb_wrap">
+		<div class="webview_lnb_wrap">
 			<div class="inner_wrap">
 				<div class="page_tit"><strong>자주 묻는 질문</strong></div>
 			</div>
-		</div> -->
+		</div>
 		<!-- // webview_lnb_wrap -->
 	</div>
 	<!-- // header_wrap -->
