--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@ tr:hover td{background-color:#eee;}
 			<td>-</td>
 		</tr>
 
-		<tr class="line1">
+		<!-- <tr class="line1">
 			<td></td>
 			<td>인트로</td>
 			<td></td>
@@ -139,7 +139,7 @@ tr:hover td{background-color:#eee;}
 			<td></td>
 			<td><a target="_blank" href="./html/01_home/FRIN.html">FRIN.html</a></td>
 			<td>-</td>
-		</tr>
+		</tr> -->
 
 		<tr class="line1">
 			<td>FRHO_001</td>
