공모주정보 고도화 관련 내용 수정.

--- a/app/html/02_ipo/FRIP_001.html
+++ b/app/html/02_ipo/FRIP_001.html
@@ -30,6 +30,8 @@
 				<li class="item"><button type="button"><span>홈</span></button></li>
 				<li class="item"><button type="button" class="active"><span>IPO 일정</span></button></li>
 				<li class="item"><button type="button"><span>기업분석</span></button></li>
+				<li class="item"><button type="button"><span>뉴스</span></button></li>
+				<li class="item"><button type="button"><span>알림</span></button></li>
 			</ul>
 		</nav>
 		<!-- // nav-->
