--- a/app/html/03_analyze/FRCA_001.html
+++ b/app/html/03_analyze/FRCA_001.html
@@ -30,6 +30,8 @@
 				<li class="item"><button type="button"><span>홈</span></button></li>
 				<li class="item"><button type="button"><span>IPO 일정</span></button></li>
 				<li class="item"><button type="button" class="active"><span>기업분석</span></button></li>
+				<li class="item"><button type="button"><span>뉴스</span></button></li>
+				<li class="item"><button type="button"><span>알림</span></button></li>
 			</ul>
 		</nav>
 		<!-- // nav-->
@@ -45,6 +47,15 @@
 				<div class="content_top">
 
 					<div class="ca_wrap">
+
+						<div class="ca_tab">
+							<ul>
+								<li><button type="button" class="active"><span>기업 리포트</span></button></li>
+								<li><button type="button"><span>전체 종목</span></button></li>
+							</ul>
+						</div>
+						<!-- // ca_tab -->
+
 						<div class="ca_item_list">
 							<div class="ca_item" onclick="">
 								<div class="thum">
