--- a/app/index.html
+++ b/app/index.html
@@ -422,6 +422,17 @@ tr:hover td{background-color:#eee;}
 			<td></td>
 		</tr>
 
+		<tr class="line1">
+			<td>FRCS_001P</td>
+			<td>즐겨찾기</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td><a target="_blank" href="./html/07_etc/FRCS_001P.html">FRCS_001P.html</a></td>
+			<td></td>
+		</tr>
+
 
 		<tr class="line1">
 			<td></td>
