--- a/app_simple/html/03_analyze/FRCA_001.html
+++ b/app_simple/html/03_analyze/FRCA_001.html
@@ -31,6 +31,9 @@
 				<li class="item"><button type="button"><span>IPO 일정</span></button></li>
 				<li class="item"><button type="button" class="active"><span>기업분석</span></button></li>
 			</ul>
+			<div class="fav">
+				<button type="button" class="btn_fav"><span>즐겨찾기</span></button>
+			</div>
 		</nav>
 		<!-- // nav-->
 	</div>
