--- a/app/html/03_analyze/FRCA_001.html
+++ b/app/html/03_analyze/FRCA_001.html
@@ -33,6 +33,9 @@
 				<li class="item"><button type="button"><span>뉴스</span></button></li>
 				<li class="item"><button type="button"><span>알림</span></button></li>
 			</ul>
+			<div class="fav">
+				<button type="button" class="btn_fav"><span>즐겨찾기</span></button>
+			</div>
 		</nav>
 		<!-- // nav-->
 	</div>
