--- a/app_simple/html/03_analyze/FRCA_003P_01.html
+++ b/app_simple/html/03_analyze/FRCA_003P_01.html
@@ -33,6 +33,12 @@
 				<div class="tit"><strong>두산로보틱스</strong></div>
 				<span class="code">(454921)</span>
 			</div>
+			<div class="fav">
+				<label>
+					<input type="checkbox">
+					<span class="checkmark"></span>
+				</label>
+			</div>
 		</div>
 		<!-- // title_sub_detail -->
 
