알림목록에 즐겨찾기 내용 추가. (아이콘 이미지 추가.) 토스트 팝업 추가.

--- a/app/html/03_analyze/FRCA_002P_01.html
+++ b/app/html/03_analyze/FRCA_002P_01.html
@@ -214,6 +214,17 @@
 
 
 
+<div class="layer toast">
+	<div class="inner">
+		<span class="ico"><img src="../../images/common/ico_fav_on.png" alt=""></span>
+		<p class="txt">관심종목에 추가되었어요</p>
+		<button type="button" class="btn_close"><span>확인</span></button>
+	</div>
+</div>
+<!-- // layer toast -->
+
+
+
 
 
 
