--- a/app/html/07_etc/FRNO_001.html
+++ b/app/html/07_etc/FRNO_001.html
@@ -76,6 +76,20 @@
 
 							<div class="notice_item">
 								<div class="icon">
+									<span><img src="../../images/common/ic-favorite.png" alt="아이콘"></span>
+								</div>
+								<div class="txt_wrap">
+									<div class="info_date">
+										<span class="type">즐겨찾기</span>
+										<span class="date">2024.02.21 11:00</span>
+									</div>
+									<div class="tit">오늘은 ㅇㅇㅇ 상장일이에요!</div>
+								</div>
+							</div>
+							<!-- // notice_item -->
+
+							<div class="notice_item">
+								<div class="icon">
 									<span><img src="../../images/common/ic-certicheck.png" alt="아이콘"></span>
 								</div>
 								<div class="txt_wrap">
