--- a/app_simple/html/01_home/FRIN.html
+++ b/app_simple/html/01_home/FRIN.html
@@ -50,28 +50,30 @@
 
 						
 							<div class="intro_sub_content">
-								<div class="tit"><strong>PASS공모주정보 서비스<br />
-									이렇게 이용해보세요.</strong></div>
+								<div class="tit"><strong>서비스를 가입하면<br />
+									무료 혜택을 받으실 수 있어요.</strong></div>
 								<div class="intro_sub_group">
 									<div class="sub_tit">
-										<em><span>IPO일정을</span></em> 한 눈에 확인!!
+										<em><span>IPO일정을</span></em> 한 눈에!<br /><br />
 									</div>
-									<p class="txt">진행 단계별 공모주 정보를 제공합니다.<br />
-										공모주 정보를 통해 청약 일정 확인 및 준비<br />
-										가능합니다.<br />
-										·계좌 : 공모주 청약을 위한 주간사 증권계좌를 준비합니다.<br />
-										·청약 : 주간사 증권계좌에 청약 증거금 입금 후 청약 신청 가능합니다.<br />
-										·상장 : 배정 받은 주식 매매 가능합니다.</p>
+									<p class="txt">진행 단계별 공모주 정보를 제공하여 공모주 청약 일정을 확인하며 준비할 수 있습니다.</p>
 									<div class="img"><img src="../../images/home/img_intro02.png" alt="아이콘"></div>
 								</div>
+							</div>
+							<!-- // intro_sub_content -->
+
+							<div class="intro_sub_content">
+								<div class="tit"><strong>유료로 가입하면<br />
+									더 많은  혜택을 드려요.</strong></div>
+									<div class="price">
+										<span class="ico"><img src="../../images/home/circle-pay.png" alt="아이콘"></span>
+										<span class="txt">이용요금 월 9,900원 (부가세 포함)</span>
+									</div>
 								<div class="intro_sub_group">
 									<div class="sub_tit">
-										<em><span>기업분석 콘텐츠</span></em> 확인
+										<em><span>기업분석 콘텐츠</span></em> 확인<br /><br />
 									</div>
-									<p class="txt">상장 종목의 공모가 대비 시가, 종가 매도<br />
-										수익률 확인 가능합니다.<br />
-										기업 상세 분석을 통해 종목에 대한 궁금증 해결 가능합니다.<br />
-										·종목에 대한 투자전략, 투자포인트, 투자의견 제공합니다.</p>
+									<p class="txt">투자 전문가의 투자전략, 투자포인트, 투자의견을 제공합니다.</p>
 										<div class="img"><img src="../../images/home/img_intro03.png" alt="아이콘"></div>
 								</div>
 							</div>
@@ -79,13 +81,9 @@
 
 							<div class="intro_sub_content">
 								<div class="tit">
-									<strong><span>월 9,900원</span>에</strong> <span>(부가세포함)</span><br />
-									<strong>이 모든 혜택을 누려 보세요.</strong>
+									<strong>이 서비스는 <span>부분 유료</span>입니다.</strong><br />
+									<strong>우선<span>무료</span>로 사용하실 수 있습니다.</strong>
 								</div>
-								<p class="txt">
-									1) IPO일정은 모든 고객에게 제공 가능<br />
-									2) 기업분석 콘텐츠는 무료회원에게 일부만 제공 가능
-								</p>
 							</div>
 
 						</div>
@@ -101,7 +99,7 @@
 						</div>
 
 						<div class="intro_footer">
-							<button type="button"><strong>동의하고 시작하기</strong></button>
+							<button type="button"><strong>서비스 가입하기</strong></button>
 						</div>
 					</div>
 					<!-- // intro_wrap -->
