폰트 관련 추가 수정.

--- a/app/html/01_home/FRIN.html
+++ b/app/html/01_home/FRIN.html
@@ -67,7 +67,7 @@
 									더 많은  혜택을 드려요.</strong></div>
 									<div class="price">
 										<span class="ico"><img src="../../images/home/circle-pay.png" alt="아이콘"></span>
-										<span class="txt">이용요금 월 9,900원 (부가세 포함)</span>
+										<span class="txt">이용요금 월 <em>9,900</em>원 *부가세 포함</span>
 									</div>
 								<div class="intro_sub_group">
 									<div class="sub_tit">
